[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroboplan"
version = "1.1.0"
dependencies = [
  "drake == 1.38.0",
  "pin == 3.4.0",
  "matplotlib == 3.10.1",
  "meshcat == 0.3.2",
  "scipy == 1.15.2",
]
requires-python = ">=3.10"
authors = [
  {name = "Sebastian Castro", email = "sebas.a.castro@gmail.com"},
]
maintainers = [
  {name = "Sebastian Castro", email = "sebas.a.castro@gmail.com"},
]
description = "Educational Python library for manipulator motion planning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["motion planning", "manipulators", "education"]
