[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroboplan"
version = "1.3.0"
dependencies = [
  "drake == 1.43.0",
  "pin == 3.7.0",
  "matplotlib == 3.10.5",
  "meshcat == 0.3.2",
  "scipy == 1.15.3",
  "toppra == 0.6.3",
  "plyfile == 1.1.2",
]
requires-python = ">=3.10"
authors = [
  {name = "Sebastian Castro", email = "sebas.a.castro@gmail.com"},
]
maintainers = [
  {name = "Sebastian Castro", email = "sebas.a.castro@gmail.com"},
]
description = "Educational Python library for manipulator motion planning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["motion planning", "manipulators", "education"]
